try to fix table shifts

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -13,6 +13,10 @@
     box-sizing: border-box;
   }
 
+  .#{$engine_css_prefix}-hidden {
+    display: none;
+  }
+
   .#{$engine_css_prefix}-header {
     flex: 0 0 auto;
     overflow-x: hidden;
